# toron

./: .gitignore  .hgignore  LICENSE  NOTICE  README.md  discover.py  pyproject.toml  requirements-dev.txt  run-tests.py  run-tests.sh  setup.py
.github/workflows/: tests.yml
gpn/: __init__.py  _csv.py  connector.py  graph.py  node.py  partition.py
gpn/tests/: _unittest.py  common.py  test_connector.py  test_graph.py  test_node.py  test_partition.py
scripts/: generate-parser.py
src/toron/: __init__.py  __main__.py  _categories.py  _dal.py  _data_access.py  _data_models.py  _datetime.py  _mapper.py  _node.py  _schema.py  _selectors.py  _typing.py  _utils.py  categories.py  cli.py  data_access.py  data_models.py  data_service.py  formatters.py  graph.py  mapper.py  node.py  reader.py  selectors.py  xnode.py
src/toron/_dal1/: __init__.py  column_manager.py  data_connector.py  schema.py
src/toron/_data_access/: __init__.py  attribute_repository.py  base_classes.py  column_manager.py  data_connector.py  edge_repository.py  index_repository.py  location_repository.py  property_repository.py  quantity_repository.py  relation_repository.py  repositories.py  schema.py  structure_repository.py  weight_repository.py  weighting_repository.py
src/toron/cli/: __init__.py  colorconfig.py  command_add.py  command_crosswalk.py  command_index.py  command_info.py  command_init.py  command_mapping.py  command_new.py  command_quantity.py  command_rename.py  command_update.py  common.py  loggerconfig.py  main.py
src/toron/dal1/: __init__.py  column_manager.py  data_connector.py  label_manager.py  migrations.py  optimizations.py  repositories.py  schema.py
tests/: _unittest.py  check_dependencies.py  common.py  test_categories.py  test_connector.py  test_dal.py  test_dal_integration.py  test_data_access.py  test_data_models.py  test_data_service.py  test_dependencies.py  test_formatters.py  test_gpn_graph.py  test_gpn_node.py  test_graph.py  test_mapper.py  test_mapping.py  test_node.py  test_node_schema.py  test_reader.py  test_schema.py  test_selectors.py  test_serialize.py  test_usecases.py  test_utils.py  test_xmapper.py  test_xnode.py
tests/cli/: __init__.py  test_command_add.py  test_command_crosswalk.py  test_command_index.py  test_command_init.py  test_command_mapping.py  test_command_new.py  test_command_quantity.py  test_command_rename.py  test_command_update.py  test_common.py  test_main.py
tests/dal1/: __init__.py  test_attribute_repository.py  test_column_manager.py  test_crosswalk_repository.py  test_data_connector.py  test_distribution_repository.py  test_edge_repository.py  test_index_repository.py  test_label_manager.py  test_link_repository.py  test_location_repository.py  test_mapping_repository.py  test_migrations.py  test_property_repository.py  test_quantity_repository.py  test_relation_repository.py  test_schema.py  test_structure_repository.py  test_weight_group_repository.py  test_weight_repository.py  test_weighting_repository.py
tests/data_access/: test_attribute_repository.py  test_column_manager.py  test_data_connector.py  test_edge_repository.py  test_index_repository.py  test_integration.py  test_location_repository.py  test_property_repository.py  test_quantity_repository.py  test_relation_repository.py  test_schema.py  test_structure_repository.py  test_weight_repository.py  test_weighting_repository.py
toron/: __init__.py  _categories.py  _dal.py  _exceptions.py  _gpn_node.py  _mapper.py  _node_schema.py  _schema.py  _selectors.py  _selectors_grammar.lark  _serialize.py  _utils.py  connector.py  graph.py  node.py
toron/tests/: common.py  test_connector.py  test_graph.py  test_node.py
