[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toron"
version = "0.0.1"
dependencies = [
  "lark>=0.10.1",
  "typing_extensions>=3.10.0.0; python_version < '3.10'",
]
requires-python = ">=3.7"
authors = [
  { name="Shawn Brown", email="shawnbrown@users.noreply.github.com" },
]
description = "A tool kit for managing data joinability and disaggregation problems."
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]

[project.urls]
Homepage = "https://github.com/shawnbrown/toron"

[tool.tox]
legacy_tox_ini = """
  [tox]
  minversion = 4.0.0
  envlist = mypy,py{37,38,39,310,311,312,313},pypy39,pypy310
  skip_missing_interpreters = true

  [testenv]
  skip_install = true
  deps = -r requirements-dev.txt
  commands =
    python -c 'import sqlite3;print(sqlite3.sqlite_version)'
    python run-tests.py

  [testenv:mypy]
  deps =
    -r requirements-dev.txt
    mypy >= 0.990
    pandas-stubs >= 1.1.0.13
  commands = mypy src/toron
"""
