[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toron"
version = "0.0.1"
dependencies = [
  "lark>=0.10.1",
  "typing_extensions>=3.10.0.0; python_version < '3.11'",
]
requires-python = ">=3.7"
authors = [
  { name="Shawn Brown", email="shawnbrown@users.noreply.github.com" },
]
description = "A tool kit for managing data joinability and disaggregation problems."
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]

[project.urls]
Homepage = "https://github.com/shawnbrown/toron"

[tool.tox]
legacy_tox_ini = """
  [tox]
  minversion = 4.0.0
  envlist = mypy, py3{7,8,9,10,11,12,13}, pypy3{9,10}
  skip_missing_interpreters = true

  [testenv]
  package = editable
  commands =
    python --version
    python -c 'import sqlite3; print(f"SQLite {sqlite3.sqlite_version}")'
    python -O -W default -m unittest

  [testenv:mypy]
  deps =
    mypy >= 0.990
  commands =
    python --version
    mypy src/toron

  [testenv:build_dist]
  # Build source-distribution and wheel in the 'dist/' directory.
  skip_install = true
  deps =
    build
    twine
  commands =
    python -m build --no-isolation
    python -m twine check --strict dist/*
"""
